minor changes to create new branch, simply indenting in index.html in calc and some clean up from earlier this morning in the calc.js

--- a/homework/calc/css/main.css
+++ b/homework/calc/css/main.css
@@ -10,6 +10,10 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
+body{
+  background-color:#DFFF77;
+}
+
 .calculator{
   width:400px;
   height:300px;
